<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#1B3D6D">
    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="130dp"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/textview_bottom_shadow">

            <ImageView
                android:layout_marginTop="22dp"
                android:id="@+id/img_back_arrow"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:background="@drawable/back_arrow"
                android:layout_marginLeft="16dp"/>

            <TextView
                android:id="@+id/tv_heading"
                android:textColor="#6AA2B8"
                android:textSize="20dp"
                android:textStyle="bold"
                android:layout_width="260dp"
                android:layout_height="60dp"
                android:text="@string/profile_photo"
                android:gravity="center"
                android:layout_centerInParent="true"
                android:layout_alignParentTop="true"/>
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center">
        
        <ImageView
            android:layout_width="258dp"
            android:layout_height="258dp"
            android:layout_centerInParent="true"
            android:background="@drawable/profile_photo_elipse"/>
            
            <TextView
                android:id="@+id/tv_add_photo"
                android:layout_marginRight="9dp"
                android:layout_marginLeft="9dp"
                android:textStyle="bold"
                android:textSize="20sp"
                android:layout_centerInParent="true"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/add_photo"
                android:textColor="#FFFFFF"/>

        </RelativeLayout>
    </LinearLayout>

    <Button
        android:layout_centerInParent="true"
        android:layout_alignParentBottom="true"
        android:id="@+id/btn_skip"
        android:layout_gravity="center"
        android:layout_marginBottom="62dp"
        android:layout_width="259dp"
        android:layout_height="60dp"
        android:layout_marginRight="58dp"
        android:layout_marginLeft="58dp"
        android:text="@string/skip"
        android:textSize="20dp"
        android:textColor="#FFFFFF"
        android:textAllCaps="false"
        android:background="@drawable/referral_button_background"/>
</RelativeLayout>