<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#1B3D6D">

        <LinearLayout
            android:id="@+id/ll_parent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/icon_one"
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:layout_centerInParent="true"
                android:background="@drawable/header" />



            <!--<RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="13.69px">

                <ImageView
                    android:id="@+id/icon_one"
                    android:layout_width="23.54dp"
                    android:layout_height="16.49dp"
                    android:layout_centerInParent="true"
                    android:background="@drawable/icon" />
            </RelativeLayout>

            <ImageView
                android:layout_width="151dp"
                android:layout_height="18dp"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                android:background="@drawable/uci_logo" />-->

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="25dp">

                <EditText
                    android:id="@+id/edit_activation_code"
                    android:layout_width="match_parent"
                    android:layout_height="90dp"
                    android:layout_gravity="start"
                    android:layout_marginLeft="15dp"
                    android:layout_marginRight="15dp"
                    android:background="@drawable/edit_text_background"
                    android:gravity="center"
                    android:hint="@string/enter_activation_code"
                    android:imeOptions="actionDone"
                    android:inputType="number"
                    android:maxLines="1"
                    android:maxLength="11"
                    android:paddingBottom="28dp"
                    android:paddingLeft="13dp"
                    android:paddingRight="13dp"
                    android:paddingTop="28dp"
                    android:textColor="#555759"
                    android:textColorHint="#C6BEB5"
                    android:textSize="20dp"
                    android:textStyle="bold">
                </EditText>

                <TextView
                    android:visibility="gone"
                    android:id="@+id/tv_activation_code_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Activation Code"
                    android:gravity="center"
                    android:layout_marginTop="10dp"
                    android:textColor="#555759"
                    android:textSize="14dp"/>
            </FrameLayout>

            <TextView
                android:id="@+id/tv_lost_activation_code"
                android:layout_width="match_parent"
                android:layout_height="25dp"
                android:layout_marginLeft="58dp"
                android:layout_marginRight="58dp"
                android:layout_marginTop="40px"
                android:gravity="center"
                android:text="@string/lost_activation_code"
                android:textColor="#6AA2B8"
                android:textSize="18dp" />

            <TextView
                android:id="@+id/tv_activation_code_msg"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="58dp"
                android:layout_marginRight="58dp"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:layout_marginTop="18px"
                android:gravity="center"
                android:text="@string/check_your_email_for_your_activation_code"
                android:textColor="#FFFFFF"
                android:textSize="18dp" />

        </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_alignParentBottom="true">

            <TextView
                android:id="@+id/tv_signed_up_before"
                android:layout_width="match_parent"
                android:layout_height="25dp"
                android:layout_marginLeft="58dp"
                android:layout_marginRight="58dp"
                android:gravity="center"
                android:text="@string/signed_up_before"
                android:textColor="#6AA2B8"
                android:textSize="18dp" />

            <Button
                android:id="@+id/btn_next"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_marginLeft="58dp"
                android:layout_marginRight="58dp"
                android:layout_marginTop="12dp"
                android:background="@drawable/referral_button_background"
                android:text="Activate"
                android:textColor="#707B7C"
                android:textSize="20dp"
                android:textAllCaps="false"
                android:visibility="visible"
                android:enabled="false"/>

            <Button
                android:id="@+id/btn_login"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_marginLeft="58dp"
                android:layout_marginRight="58dp"
                android:layout_marginTop="12dp"
                android:layout_marginBottom="62dp"
                android:background="@drawable/referral_button_background"
                android:text="@string/login"
                android:textColor="#FFFFFF"
                android:textSize="20dp"
                android:textAllCaps="false"/>

    </LinearLayout>

</RelativeLayout>